--- a/_config.yml
+++ b/_config.yml
@@ -1,48 +1,15 @@
-# theme: jekyll-theme-cayman
-# title: My Data Science Portfolio
-# description: Here are some of my key data science projects and notable accomplishments
-
-# Theme configuration
-theme: beautiful-jekyll
-
-# Basic settings
+theme: jekyll-theme-cayman
 title: My Data Science Portfolio
 description: Here are some of my key data science projects and notable accomplishments
 
-
-# Kramdown settings
+# Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
+    # Use GitHub flavored markdown, including triple backtick fenced code blocks
     input: GFM
+    # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
     syntax_highlighter: rouge
     syntax_highlighter_opts:
+        # Use existing pygments syntax highlighting css
         css_class: 'highlight'
 
-# Logo & Favicon (Assuming you have them in the assets folder)
-logo: "/assets/logo.png"
-favicon: "/assets/favicon.ico"
 
-# Navigation links
-nav:
-  - name: "About"
-    link: "/about/"
-  - name: "Projects"
-    link: "/projects/"
-  - name: "Blog"
-    link: "/blog/"
-
-# Social media and other links
-# Replace '#username' with your usernames or links
-social:
-  - name: "github"
-    link: "https://github.com/#username"
-  - name: "linkedin"
-    link: "https://www.linkedin.com/in/#username"
-  - name: "twitter"
-    link: "https://twitter.com/#username"
-
-# Google Analytics (optional - remove or replace with your tracking ID if you want to use it)
-# google_analytics: "UA-XXXXXXXXX-X"
-
-# Disqus commenting (optional - replace with your Disqus shortname if you want to use it)
-# disqus:
-#   shortname: your_disqus_shortname
