Add linkes for footer

--- a/_config.yml
+++ b/_config.yml
@@ -12,4 +12,10 @@ kramdown:
         # Use existing pygments syntax highlighting css
         css_class: 'highlight'
 
+footer:
+  links:
+    - title: "LinkedIn"
+      url: "https://www.linkedin.com/in/michaeldiamond2/"
+    - title: "GitHub"
+      url: "https://github.com/micdiamond/"
 
